# FC-synth

./: .env.example  .gitignore  DATASET_CARD.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
examples/: sample.jsonl
examples/qwen36_demo10/: enriched_all.jsonl  enriched_info.json  validation_results.json
scripts/: serve_vllm.sh
synthfc/: __init__.py  __main__.py  cli.py  config.py
synthfc/core/: __init__.py  batch_api.py  client.py  generator.py  prompt_builder.py  sampler.py  validator.py
synthfc/pipeline/: __init__.py  enriched_export.py  expand.py  export.py  merge.py  postprocess.py  token_stats.py  validate.py
synthfc/tools/: __init__.py
synthfc/tools/eng/: __init__.py  booking.py  calendar.py  code_tools.py  communication.py  crm.py  database.py  documents.py  ecommerce.py  finance.py  government.py  health.py  iot_sensors.py  knowledge_base.py  media.py  news.py  productivity.py  search.py  smart_home.py  social_media.py  travel.py  utilities.py  utils.py  weather.py
synthfc/tools/ita/: __init__.py  booking.py  calendar.py  code_tools.py  communication.py  crm.py  database.py  documents.py  ecommerce.py  finance.py  government.py  health.py  iot_sensors.py  knowledge_base.py  media.py  news.py  productivity.py  search.py  smart_home.py  social_media.py  travel.py  utilities.py  utils.py  weather.py
synthfc/webapp/: __init__.py  app.py
synthfc/webapp/static/: app.js  style.css
synthfc/webapp/templates/: datasets.html  index.html  stats.html
